# KG-Inspect

./: .env-temp  .gitignore  Makefile  README.md  README_eval.md  pyproject.toml  requirements.txt
all_results/: answers_kg_inspect_merged.csv  eval_MVTec.csv  eval_VisA.csv  metrics_kg_inspect_merged.csv
eval/helper/: backup.py  format.py  summary.py
eval/kg_inspect/: aggregate_eval_auto.py  aggregate_eval_results.py  eval_kg_inspect_mmad.py  eval_retry_failed_rows.py
kg_inspect/: __main__.py  cnn_inspect.py  kg_inspect.py  operate.py  pipeline_inspect.py  prompt.py  test.py
kg_inspect/cli/: cli.py
kg_inspect/cli/lightrag/: lightrag_cli.py
kg_inspect/gradio/: app.py  ui.py
kg_inspect/rag/: config.py  data_operations.py  query_handler.py  rag_manager.py
kg_inspect/utils/: device.py  prompt.py
kg_inspect/vlm/: hf.py  ollama.py  openai.py
mmad_MVTec-AD/: mmad_MVTec-AD_bottle.json  mmad_MVTec-AD_cable.json  mmad_MVTec-AD_capsule.json  mmad_MVTec-AD_carpet.json  mmad_MVTec-AD_grid.json  mmad_MVTec-AD_hazelnut.json  mmad_MVTec-AD_leather.json  mmad_MVTec-AD_metal_nut.json  mmad_MVTec-AD_pill.json  mmad_MVTec-AD_screw.json  mmad_MVTec-AD_tile.json  mmad_MVTec-AD_toothbrush.json  mmad_MVTec-AD_transistor.json  mmad_MVTec-AD_wood.json  mmad_MVTec-AD_zipper.json
mmad_VisA/: mmad_VisA_candle.json  mmad_VisA_capsules.json  mmad_VisA_cashew.json  mmad_VisA_chewinggum.json  mmad_VisA_fryum.json  mmad_VisA_macaroni1.json  mmad_VisA_macaroni2.json  mmad_VisA_pcb1.json  mmad_VisA_pcb2.json  mmad_VisA_pcb3.json  mmad_VisA_pcb4.json  mmad_VisA_pipe_fryum.json
(+38 files in other folders)
